# Face-Recognition-System

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
api/: main.py
app/: Introduction.py  utils.py
app/pages/: Face_Recognition.py
data/: actor_embedding.json
docs/: face_alignment.md  face_detection.md  face_recognition.md  index.md  siamese.md
face_alignment/: index.html
face_detection/: index.html
face_recognition/: index.html
siamese/: index.html
site/: 404.html  index.html
site/face_alignment/: index.html
site/face_detection/: index.html
site/face_recognition/: index.html
site/search/: search_index.json
site/siamese/: index.html
src/image_tagger/: components.py  config.py  main.py  utility.py
